--- a/index.css
+++ b/index.css
@@ -8,20 +8,22 @@ font-family: 'Righteous', cursive;
 }
 
 html { background: url('https://cdn.vox-cdn.com/thumbor/7mJsFfjoaWKjxYI5uG79FlJpyeM=/0x208:1600x1046/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/13070145/sony-original-walkman-tps-l2.0.1406747932.jpg') no-repeat center center fixed;
+  background-size: cover;
+
 
 }
 
 h1 {
-    position: relative;
-    text-align: center;
-    width: 300px;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.6);
+position: relative;
+text-align: center;
+width: 300px;
+margin: 0 auto;
+margin-bottom: 20px;
+background-color: rgba(255, 255, 255, 0.6);
 }
 
 #container {
-    background-color: rgba(255, 255, 255, 0.6);
+background-color: rgba(255, 255, 255, 0.6);
 margin: 0 auto;
 width: 300px;
 height: 500px;
@@ -33,19 +35,15 @@ border-radius: 15px;
 }
 
 fieldset {
-    border: 0px;
-    text-align: left;
-    margin-top: 50px;
-    
+border: 0px;
+text-align: left;
+margin-top: 50px;
 }
 
-#starter-page {
-
-}
 
 button {
 margin-top: 5px;
-margin-bottom: 10px;
+margin-bottom: 5px;
 width: 150px;
 height: 50px;
 border-radius: 5px 20px 5px;
@@ -55,25 +53,15 @@ background-color: rgba(247, 229, 229, 0.753);
 }
 
 button:hover{
-    background-color:  rgba(49, 103, 142, 0.7);
+background-color:  rgba(49, 103, 142, 0.7);
 }
 
 form {
-  margin: 0 auto;
-  
+margin: 0 auto;  
 }
 
-#progress{
- margin-top: 25%;
-}
 
-#question-count {
 
-}
-
-#correct-answer {
-
-}
 
 label {
  margin: 0 auto;
@@ -99,5 +87,11 @@ img {
 
 label:hover{
     background-color: rgba(247, 247, 9, 0.63);
+}
+
+@media screen and (max-width: 360) {
+  body {
+    width: 50%;
+}
 }
 
